--- a/app/globals.css
+++ b/app/globals.css
@@ -22,5 +22,15 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif, Arial, Helvetica, sans-serif;
+}
+
+
+@media (max-width: 480px) {
+  .mini{
+    justify-content: center;
+  }
+  .mini>ul{
+    display: none;
+  }
 }
