Added Skills and Technologies  section

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 :root {
   --background: #ffffff;
   --foreground: #0D1117;
+  --secondary-color: #9299a7;
+  --border: rgba(255, 255, 255, 0.1);
+  --hover-border: rgba(255, 255, 255, 0.9);
 }
 
 @theme inline {
