refined skills section and some improvements in About section

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,3 +37,10 @@ body {
     display: none;
   }
 }
+
+
+* {
+  -webkit-user-select: none;     /* Safari */
+  -webkit-touch-callout: none;   /* iOS Safari: disables long-press menu */
+  user-select: none;             /* Standard */
+}
